--- a/css/index.css
+++ b/css/index.css
@@ -1552,7 +1552,7 @@ body {
 	width: 274px;
 	margin: 0 auto;
 	height: auto;
-	/* margin-top: 24px; */
+	margin-top: 24px;
 	margin-bottom: 20px;
 }
 
